--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "node scripts/simple-test.js",
+    "test:installer": "node scripts/test-installer.js",
     "publish": "node scripts/publish.js",
     "prepack": "echo \"Preparing package for publication...\"",
     "postpack": "echo \"Package ready for publication\""
@@ -28,7 +29,8 @@
     "fs-extra": "^11.2.0",
     "chalk": "^4.1.2",
     "inquirer": "^8.2.6",
-    "ora": "^5.4.1"
+    "ora": "^5.4.1",
+    "axios": "^1.6.2"
   },
   "repository": {
     "type": "git",
