--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/khanhbkqt/cursor-rules-agent.git"
+    "url": "git+https://github.com/khanhbkqt/cursor-rules-agent.git"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -43,4 +43,4 @@
   "publishConfig": {
     "access": "public"
   }
-} 
+}
